--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
 	<head>
 		
 		<link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
-		<link href='http://fonts.googleapis.com/css?family=Oswald:400,300' rel='stylesheet' type='text/css'>
 		<link href="style.css" type="text/css" rel="stylesheet" />
 
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
@@ -24,14 +23,19 @@
             socket.on('files', function(data) {
             	var fileArray = data;
 
-            	//TODO: deal with .ds file - how to ignore this??
-
-            	for (var i=0; i<fileArray.length; i++) {
+            	for (var i=1; i<fileArray.length; i++) {		//starting at i=1 accommodates for the .ds file...
             		// console.log(fileArray[i]);	//will list all images in the image folder 
 
-            		$( "#container" ).prepend(
+            		//original code - THIS WORKS
+            		// $( "#container" ).prepend(
+	             //    	'<div class="image-holder">'+
+	             //    		'<img src="images/'+fileArray[i]+'" >'+
+	             //    	'</div>'
+              //   	);
+
+                	$( "#container" ).prepend(
 	                	'<div class="image-holder">'+
-	                		'<img src="images/'+fileArray[i]+'" >'+
+	                		'<img src="images/'+fileArray[i]+'" width='+400+' >'+
 	                	'</div>'
                 	);
             	}
@@ -43,12 +47,10 @@
                 img = data;
 
                 //TODO: resize the gif here!!!!!!!!
-                img.width = 400;
-            	img.height = 300;
 
                 $( "#container" ).prepend(
                 	'<div class="image-holder">'+
-                		'<img src="'+img+'" >'+
+                		'<img src="'+img+'" width='+400+' >'+
                 	'</div>'
                 );
             });
@@ -57,7 +59,6 @@
             socket.on('captureStarted', function() {
             	console.log("CAPTURE STARTED!");
             });
-
 
 
 			function formatWindow() {
@@ -105,6 +106,8 @@
 			</div>
 
 		</div>
+
+		<div id="footer"> hello</div>
 
 	</body>
 
