--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
             	}
             });
 
+
+
 			//for receiving new snaps 
 			socket.on('image', function (data) {
                 console.log("RECEIVED AN IMAGE FROM THE CAMERA!");
@@ -84,8 +86,12 @@
 	<body>
 		<div id="stripe"> </div>
 
+		<!-- <div id="title">Mirror Snaps </div> -->
+		<!-- <div id="title2"> Mirror Snaps</div> -->
+
+
 		<div id="header">
-			<h1> Mirror Snaps </h1>
+			<h1> Mirror Snaps</h1>
 		</div>
 
 
