--- a/index.html
+++ b/index.html
@@ -26,7 +26,14 @@
             	for (var i=1; i<fileArray.length; i++) {		//starting at i=1 accommodates for the .ds file...
             		// console.log(fileArray[i]);	//will list all images in the image folder 
 
-                	$( "#gif-container" ).prepend(
+                	// $( "#gif-container" ).prepend(
+	                // 	'<div class="image-holder">'+
+	                // 		'<img src="images/'+fileArray[i]+'" width='+400+' height='+300+' >'+
+	                // 		'<a href="https://www.facebook.com/sharer/sharer.php?u=http://localhost:4000/images/'+fileArray[i]+'">Share on Facebook</a>' +	                		
+	                // 	'</div>'
+                	// );
+
+                		$( "#gif-container" ).prepend(
 	                	'<div class="image-holder">'+
 	                		'<img src="images/'+fileArray[i]+'" width='+400+' height='+300+' >'+
 	                	'</div>'
